--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,8 @@
                 "TokenAuthenticationDataExtension":"TokenAuthentication_Dev",
                 "Folder":"AppsFlyers_Dev",
                 "PORT":"5000",
-                "key":"^/WU?()D6TeF.*$[,2H5Le$9nYVf-"
+                "key":"^/WU?()D6TeF.*$[,2H5Le$9nYVf-",
+                "restEndpoint":"https://mc8nghvf-gp9-nfl9jcsjjs7r214.rest.marketingcloudapis.com/"
             }
         }
     ]
