--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "scripts": {
     "start": "node app.js",
-    "build": "webpack"
+    "build": "webpack",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "repository": {
     "type": "git",
@@ -27,12 +29,10 @@
   "homepage": "https://github.com/devsutd/journey-builder-activity-template#readme",
   "dependencies": {
     "@salesforce-ux/design-system": "^2.9.4",
-    "acorn": "^7.1.0",
     "blocksdk": "^1.1.1",
     "body-parser": "^1.18.2",
     "bower": "^1.8.8",
     "consolidate": "^0.15.1",
-    "crypto-js": "^3.1.9-1",
     "css-loader": "^1.0.1",
     "ejs": "^2.7.1",
     "errorhandler": "^1.5.0",
@@ -51,8 +51,7 @@
     "moment-timezone": "^0.5.14",
     "multer": "^1.4.2",
     "multiconf": "^1.0.8",
-    "nodemon": "^2.0.2",
-    "npm": "^6.10.3",
+    "npm": "^6.13.4",
     "request": "^2.81.0",
     "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5",
@@ -66,12 +65,14 @@
     "uuid": "^3.3.3",
     "webpack": "^4.41.5",
     "xml2js": "^0.4.22",
-    "xss-escape": "0.0.6"
+    "xss-escape": "0.0.6",
+    "snyk": "^1.346.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.1",
     "webpack-cli": "^3.3.10"
-  }
+  },
+  "snyk": true
 }
