--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   },
   "scripts": {
     "start": "node app.js",
-    "build": "webpack",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -73,6 +71,5 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.1",
     "webpack-cli": "^3.3.10"
-  },
-  "snyk": true
+  }
 }
