--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "uuid": "^3.3.3",
     "webpack": "^4.41.5",
     "xml2js": "^0.4.22",
-    "xss-escape": "0.0.6",
-    "snyk": "^1.346.0"
+    "xss-escape": "0.0.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
